[package]
name = "btc-tx-search"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="~2.33.3"
reqwest={version = "~0.11.6", features = ["json"] }
tokio={version = "~1.12.0", features = ["full"] }
serde="1.0.130"
serde_json="1.0.68"
serde_derive="1.0.130"
colored="2.0.0"